--- a/configuration.yaml
+++ b/configuration.yaml
@@ -125,4 +125,4 @@ camera:
 
 group: !include groups.yaml
 automation: !include automations.yaml
-script: !include scripts.yaml
+#script: !include scripts.yaml
